src/metrics/snapshots/big_code_analysis__metrics__abc__tests__typescript_instanceof_counts_as_condition.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 0.0,
  "branches": 0.0,
  "conditions": 1.0,
  "magnitude": 1.0,
  "assignments_average": 0.0,
  "branches_average": 0.0,
  "conditions_average": 0.3333333333333333,
  "assignments_min": 0.0,
  "assignments_max": 0.0,
  "branches_min": 0.0,
  "branches_max": 0.0,
  "conditions_min": 0.0,
  "conditions_max": 1.0
}
